client/src/css/app.css
/* ... */
.card:hover {
	z-index: 10;
}

.card-column {
	display: flex;
	flex-direction: column;
	margin-bottom: 0.5em;
	min-height: 300px;
}
.card-column > .column-card-container,
.card-column > .column-card-container > .card,
.card-column > .card {
	height: 0;
	padding-bottom: calc(
		var(--card-title-height-factor, 1) * 13.5%
	); /* As a percentage of the container width, used to display card name (instead of setting a height), makes its 'responsive' */
	margin: 0;
	z-index: 0;
}

/* Bug in webkit applies with style to another element while drag & dropping https://bugs.webkit.org/show_bug.cgi?id=134555 */
.card-column > .column-card-container:hover,
.card-column > .card:hover {
	z-index: 800; /* NOTE: This forces the browser to relayout and is very slow in large lists (especially on Chrome). A solution could be to render a copy instead of bringing it forward, but it's more complicated. */
}

.card-column > .column-card-container:last-child,
.card-column > .column-card-container:last-child > .card,
.card-column > .card:last-child {
	margin-bottom: calc(142.5% - var(--card-title-height-factor, 1) * 13.5%);
}

/* Only use this hover rule on desktop (hover capabilities and a mouse or equivalent device) */
@media (hover: hover) and (pointer: fine) {
	/* No :hover outside of the div bounds, will let the card disappear when the mouse moves outside of it */
	.card-column > .column-card-container > .card > div, /* This version doesn't ~always~ work as expected on Chrome (Sometimes it just fixes itself...), but does in Firefox  */
	.card-column > .card > div {
		pointer-events: none;
	}
	/* Except if its fully visible */
	.card-column > .column-card-container:last-child > .card > div,
	.card-column > .card:last-child > div {
		pointer-events: auto;
	}
}

.drag-column {
	min-width: 200px;
	background-color: rgba(0, 0, 0, 0.1);
	border-radius: 6px;

	transition:
		box-shadow 0.1s ease-in-out,
		background-color 0.1s ease-in-out;
}

.drag-column[drop-active="true"] {
	/*box-shadow: -7px 0 5px -5px white, 7px 0 5px -5px white;*/
	box-shadow: 0 0 4px 3px white;
	background-color: rgba(255, 255, 255, 0.1);
}
/* :has isn't supported on Firefox yet, causing the whole rule to be ignored. This is duplicated on purpose. */
.drag-column:has(.ghost),
.drag-column[drop-active="true"] {
	box-shadow: 0 0 4px 3px white;
	background-color: rgba(255, 255, 255, 0.1);
}

/**** Draft Spectator ****/

.draft-watching-state {
	text-align: center;

	div {
		margin-bottom: 1em;
	}
}

.session-spectators {
	position: relative;
	display: flex;
	align-items: center;
	gap: 0.2em;
	font-size: 0.8em;
	margin-right: 0.5em;
}

.spectators-dropdown {
	position: absolute;
	top: 100%;
	left: 0;
	z-index: 10;
	display: flex;
	flex-direction: column;
	gap: 0.4em;
	min-width: 12em;
	padding: 0.5em;
	background: #282828;
	border-radius: 0.5em;
	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
	cursor: default;
	font-size: 1.25em;
}

.spectators-dropdown .spectator-name {
	position: relative;
	display: flex;
	align-items: center;
	gap: 0.3em;
	max-width: 12em;
	overflow: hidden;
	white-space: nowrap;
	font-size: 0.8em;
	color: #aaa;
}

.spectators-dropdown .spectator-name.self {
	font-size: 1em;
	color: inherit;
}

.loading {
	position: fixed;
	z-index: 999;
	height: 2em;
	width: 2em;
	overflow: visible;
	margin: auto;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
}

/* Transparent Overlay */
.loading:before {
	content: "";
	display: block;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.8);
}

.loading + span {
	position: fixed;
	top: calc(50vh + 2em);
	right: 0;
	left: 0;
	z-index: 1000;
	text-align: center;
}

/* :not(:required) hides these rules from IE9 and below */
.loading:not(:required) {
	/* hide "loading..." text */
	font: 0/0 a;
	color: transparent;
	text-shadow: none;
	background-color: transparent;
	border: 0;
}

.loading:not(:required):after {
	--spinner-color: rgba(255, 255, 255, 0.75);
	content: "";
	display: block;
	font-size: 10px;
	width: 1em;
	height: 1em;
	margin-top: -0.5em;
	-webkit-animation: spinner 1500ms infinite linear;
	-moz-animation: spinner 1500ms infinite linear;
	-ms-animation: spinner 1500ms infinite linear;
	-o-animation: spinner 1500ms infinite linear;
	animation: spinner 1500ms infinite linear;
	border-radius: 0.5em;
	-webkit-box-shadow:
		var(--spinner-color) 1.5em 0 0 0,
		var(--spinner-color) 1.1em 1.1em 0 0,
		var(--spinner-color) 0 1.5em 0 0,
		var(--spinner-color) -1.1em 1.1em 0 0,
		rgba(0, 0, 0, 0.5) -1.5em 0 0 0,
		rgba(0, 0, 0, 0.5) -1.1em -1.1em 0 0,
		var(--spinner-color) 0 -1.5em 0 0,
		var(--spinner-color) 1.1em -1.1em 0 0;
	box-shadow:
		var(--spinner-color) 1.5em 0 0 0,
		var(--spinner-color) 1.1em 1.1em 0 0,
		var(--spinner-color) 0 1.5em 0 0,
		var(--spinner-color) -1.1em 1.1em 0 0,
		var(--spinner-color) -1.5em 0 0 0,
		var(--spinner-color) -1.1em -1.1em 0 0,
		var(--spinner-color) 0 -1.5em 0 0,
		var(--spinner-color) 1.1em -1.1em 0 0;
}

@keyframes spinner {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

.shaking {
	animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
	transform: translate3d(0, 0, 0);
	backface-visibility: hidden;
	perspective: 1000px;
}

@keyframes shake {
	10%,
	90% {
		transform: translate3d(-1px, 0, 0);
	}

	20%,
	80% {
		transform: translate3d(2px, 0, 0);
	}

	30%,
	50%,
	70% {
		transform: translate3d(-4px, 0, 0);
	}

	40%,
	60% {
		transform: translate3d(4px, 0, 0);
	}
}

.pulsing {
	animation: pulse 0.4s;
	box-shadow: 0 0 0 0 rgba(200, 0, 0, 1);
	transform: scale(1);
}

@keyframes pulse {
	0% {
		transform: scale(1.1);
		box-shadow: 0 0 0 0 rgba(200, 0, 0, 0.7);
	}

	70% {
		transform: scale(1);
		box-shadow: 0 0 0 10px rgba(200, 0, 0, 0);
	}

	100% {
		transform: scale(1);
		box-shadow: 0 0 0 0 rgba(200, 0, 0, 0);
	}
}

.rochester-container {
	display: flex;
	align-items: flex-start;
}
/* ... */

